# ti-d3-mobile-robot-demos

./: .gitignore  LICENSE  README.md  init_setup.sh
docker/: Dockerfile.arm64v8.noetic  Dockerfile.x86_64.noetic  docker_build.sh  docker_build_pc.sh  docker_run.sh  docker_run_pc.sh  env_list.txt
nodes/ti_detect_go/: CMakeLists.txt  README.md  package.xml
nodes/ti_detect_go/data/: radar-2022-10-12.bag
nodes/ti_detect_go/docs/: fsm_diagram.drawio
nodes/ti_detect_go/launch/: bag_detect_go.launch  iwr_detect_go.launch
nodes/ti_detect_go/rviz/: radar.rviz
nodes/ti_detect_go/src/: detect_go.cpp  detect_go.h
nodes/ti_dlp_command/: CMakeLists.txt  package.xml  setup.py
nodes/ti_dlp_command/launch/: dlp.launch
nodes/ti_dlp_command/scripts/: dlp_interface.py  dlp_ros.py
nodes/tid3_robot_demos/: CMakeLists.txt  README.md  package.xml
nodes/tid3_robot_demos/launch/: fusion4x_detect_go.launch  fusion4x_rviz.launch  fusion_detect_go.launch  fusion_rviz.launch  fusion_viz.launch  gscam_objdet_cnn.launch  v4l_imx390.launch
nodes/tid3_robot_demos/rviz/: fusion_1up.rviz  fusion_4up.rviz
scripts/: install_d3_nodes.sh  install_imx390_ldc_files.sh  install_radar_driver.sh
scripts/patches/: d3_fusion.patch  d3_fusion_4x.patch  edge_ai_apps_gst_repo.patch  edge_ai_apps_setup_cameras.sh.patch  robotics_sdk.patch
scripts/tda4_files/: .bashrc  10-radar.rules  radar_load.sh  uenv.txt
