<?xml version="1.0"?>
<package format="2">
  <name>ti_detect_go</name>
  <version>0.1.0</version>
  <description>The ti_detect_go package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jroh@ti.com">jroh</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ti_mmwave_tracker_rospkg</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>ti_mmwave_tracker_rospkg</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ti_mmwave_tracker_rospkg</exec_depend>

</package>
