<?xml version="1.0"?>
<package format="2">
  <name>ti_dlp_command</name>
  <version>0.0.0</version>
  <description>
  The ti_dlp_command package for sending commands to DLP3021LEQ1EVM for Electronica 2022 demo.
  The package expects the DLP EVM to be preflashed with a special image made for Electronica.
  </description>

  <maintainer email="t-fujiwara1@ti.com">Takuma Fujiwara</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ti_dlp_command</url> -->


<author email="t-fujiwara1@ti.com">Takuma Fujiwara</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pyftdi</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
